--- a/kiji_flume.conf
+++ b/kiji_flume.conf
@@ -8,7 +8,7 @@ a1.channels = c1
 
 # Describe/configure the source
 a1.sources.r1.type = netcat
-a1.sources.r1.bind = robert-wibi
+a1.sources.r1.bind = 0.0.0.0
 a1.sources.r1.port = 44444
 
 # Describe the sink
