--- a/kiji_flume.conf
+++ b/kiji_flume.conf
@@ -13,7 +13,7 @@ a1.sources.r1.port = 44444
 
 # Describe the sink
 # a1.sinks.k1.type = logger
-a1.sinks.k2.type = org.kiji.flume.TokenKijiSink
+a1.sinks.k2.type = org.kiji.flume.TwitterKijiSink
 a1.sinks.k2.tableuri = kiji://.env/default/flume_test/
 
 # Use a channel which buffers events in memory
