--- a/src/main/resources/twitter.conf
+++ b/src/main/resources/twitter.conf
@@ -26,7 +26,7 @@ twitteragent.sources.twittersource.type = org.kiji.flume.TwitterSource
 
 # Describe the sink
 twitteragent.sinks.twitterkijisink.type = org.kiji.flume.TwitterKijiSink
-twitteragent.sinks.twitterkijisink.tableuri = kiji://.env/default/tweets/
+twitteragent.sinks.twitterkijisink.tableuri = kiji://.env/default/tweets/tweet:text
 
 # Use a channel which buffers events in memory
 twitteragent.channels.c1.type = memory
