--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project
+    xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <name>kiji-flume</name>
+  <url>http://www.kiji.org</url>
   <groupId>org.kiji.flume</groupId>
   <artifactId>kiji-flume</artifactId>
   <version>0.1.0-SNAPSHOT</version>
@@ -12,17 +17,10 @@
     <version>1.1.0</version>
   </parent>
 
-  <name>kiji-flume</name>
-  <url>http://maven.apache.org</url>
-
   <properties>
-    <kiji-delegation.version>1.0.0</kiji-delegation.version>
-    <kiji-platforms.version>1.1.0</kiji-platforms.version>
-    <kiji-schema.version>1.1.0</kiji-schema.version>
-    <kiji-mapreduce.version>1.0.0</kiji-mapreduce.version>
-    <fake-hbase.version>0.1.0</fake-hbase.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <apache-flume.version>1.3.1</apache-flume.version>
+    <kiji-framework.version>1.1.0</kiji-framework.version>
   </properties>
 
   <build>
@@ -50,116 +48,15 @@
     </plugins>
   </build>
 
-
   <dependencies>
+    <!-- Kiji Dependencies. -->
     <dependency>
-      <groupId>org.kiji.annotations</groupId>
-      <artifactId>annotations</artifactId>
+      <groupId>org.kiji.framework</groupId>
+      <artifactId>kiji-framework</artifactId>
+      <version>${kiji-framework.version}</version>
     </dependency>
-    <dependency>
-      <groupId>org.kiji.schema</groupId>
-      <artifactId>kiji-schema</artifactId>
-      <version>${kiji-schema.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.kiji.schema</groupId>
-      <artifactId>kiji-schema</artifactId>
-      <version>${kiji-schema.version}</version>
-      <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.kiji.hadoop</groupId>
-      <artifactId>hadoop-configurator</artifactId>
-      <version>1.0.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.kiji.testing</groupId>
-      <artifactId>fake-hbase</artifactId>
-      <version>${fake-hbase.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.kiji.mapreduce</groupId>
-      <artifactId>kiji-mapreduce</artifactId>
-      <version>${kiji-mapreduce.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.kiji.mapreduce</groupId>
-      <artifactId>kiji-mapreduce</artifactId>
-      <version>${kiji-mapreduce.version}</version>
-      <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.kiji.avro</groupId>
-      <artifactId>kiji-avro</artifactId>
-      <version>1.1.1-cdh4</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.hbase</groupId>
-      <artifactId>hbase</artifactId>
-      <scope>test</scope>
-      <type>test-jar</type>
-    </dependency>
-    <dependency>
-      <groupId>org.easymock</groupId>
-      <artifactId>easymock</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-client</artifactId>
-      <version>${hadoop.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-core</artifactId>
-      <version>${hadoop.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.hbase</groupId>
-      <artifactId>hbase</artifactId>
-      <version>${hbase.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-minicluster</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.mrunit</groupId>
-      <artifactId>mrunit</artifactId>
-      <classifier>hadoop2</classifier>
-      <!-- I do not know if this version number is correct-->
-      <version>0.9.0-incubating</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>commons-codec</groupId>
-      <artifactId>commons-codec</artifactId>
-      <version>1.4</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-    </dependency>
+
+    <!-- Flume Dependencies. -->
     <dependency>
       <groupId>org.apache.flume</groupId>
       <artifactId>flume-ng-sdk</artifactId>
@@ -175,12 +72,13 @@
       <artifactId>flume-ng-configuration</artifactId>
       <version>${apache-flume.version}</version>
     </dependency>
+
+    <!-- Misc. Dependencies. -->
     <dependency>
       <groupId>org.scribe</groupId>
       <artifactId>scribe</artifactId>
       <version>1.3.5</version>
     </dependency>
-
   </dependencies>
 
   <repositories>
@@ -201,5 +99,4 @@
     <url>scm:git:git@github.com:kijiproject/kiji-flume.git</url>
     <developerConnection>scm:git:git@github.com:kijiproject/kiji-flume.git</developerConnection>
   </scm>
-
 </project>
