Adds support for loading data using an import descriptor.

--- a/src/main/resources/twitter.conf
+++ b/src/main/resources/twitter.conf
@@ -25,8 +25,9 @@ twitteragent.channels = c1
 twitteragent.sources.twittersource.type = org.kiji.flume.TwitterSource
 
 # Describe the sink
-twitteragent.sinks.twitterkijisink.type = org.kiji.flume.TwitterKijiSink
-twitteragent.sinks.twitterkijisink.tableuri = kiji://.env/default/tweets/tweet:text
+twitteragent.sinks.twitterkijisink.type = org.kiji.flume.DescribedJsonKijiSink
+twitteragent.sinks.twitterkijisink.tableuri = kiji://.env/twitter/tweets
+twitteragent.sinks.twitterkijisink.importdescriptor = src/main/resources/tweetdescriptor
 
 # Use a channel which buffers events in memory
 twitteragent.channels.c1.type = memory
