--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,15 @@
   <parent>
     <groupId>org.kiji.pom</groupId>
     <artifactId>root-pom</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.3</version>
   </parent>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <apache-flume.version>1.3.1</apache-flume.version>
-    <kiji-framework.version>1.1.0</kiji-framework.version>
+    <apache-flume.version>1.4.0</apache-flume.version>
+    <kiji-framework.version>1.1.3</kiji-framework.version>
+    <scribe.version>1.3.5</scribe.version>
+    <maven-shade-plugin.version>2.1</maven-shade-plugin.version>
   </properties>
 
   <build>
@@ -44,6 +46,22 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>${maven-shade-plugin.version}</version>
+        <!--<configuration>-->
+          <!--&lt;!&ndash; put your configurations here &ndash;&gt;-->
+        <!--</configuration>-->
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
@@ -77,7 +95,11 @@
     <dependency>
       <groupId>org.scribe</groupId>
       <artifactId>scribe</artifactId>
-      <version>1.3.5</version>
+      <version>${scribe.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
     </dependency>
   </dependencies>
 
