--- a/pom.xml
+++ b/pom.xml
@@ -14,15 +14,16 @@
   <parent>
     <groupId>org.kiji.pom</groupId>
     <artifactId>root-pom</artifactId>
-    <version>1.1.3</version>
+    <version>1.1.6</version>
   </parent>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <apache-flume.version>1.4.0</apache-flume.version>
-    <kiji-framework.version>1.1.3</kiji-framework.version>
+    <kiji-schema.version>1.4.1</kiji-schema.version>
+    <kiji-mapreduce-lib.version>1.1.6</kiji-mapreduce-lib.version>
     <scribe.version>1.3.5</scribe.version>
-    <maven-shade-plugin.version>2.1</maven-shade-plugin.version>
+    <maven-shade-plugin.version>2.3</maven-shade-plugin.version>
   </properties>
 
   <build>
@@ -51,9 +52,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
         <version>${maven-shade-plugin.version}</version>
-        <!--<configuration>-->
-          <!--&lt;!&ndash; put your configurations here &ndash;&gt;-->
-        <!--</configuration>-->
         <executions>
           <execution>
             <phase>package</phase>
@@ -69,9 +67,16 @@
   <dependencies>
     <!-- Kiji Dependencies. -->
     <dependency>
-      <groupId>org.kiji.framework</groupId>
-      <artifactId>kiji-framework</artifactId>
-      <version>${kiji-framework.version}</version>
+      <groupId>org.kiji.schema</groupId>
+      <artifactId>kiji-schema</artifactId>
+      <version>${kiji-schema.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.kiji.mapreduce.lib</groupId>
+      <artifactId>kiji-mapreduce-lib</artifactId>
+      <version>${kiji-mapreduce-lib.version}</version>
+      <scope>provided</scope>
     </dependency>
 
     <!-- Flume Dependencies. -->
